--- a/ESB/packages.config
+++ b/ESB/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="MQTTnet" version="4.1.4.563" targetFramework="net48" />
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="MQTTnet" version="4.2.0.706" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
-  <package id="YamlDotNet" version="13.0.2" targetFramework="net48" />
+  <package id="YamlDotNet" version="13.1.0" targetFramework="net48" />
 </packages>
