moved ESBMessaging out of the ESB game mod

--- a/Console.Gatetech/Console.Gatetech.csproj
+++ b/Console.Gatetech/Console.Gatetech.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ESB\ESB.csproj" />
+    <ProjectReference Include="..\ESBMessaging\ESBMessaging.csproj" />
   </ItemGroup>
 
 </Project>
