--- a/Console.Datalog/Console.Datalog.csproj
+++ b/Console.Datalog/Console.Datalog.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ESB\ESB.csproj" />
+    <ProjectReference Include="..\ESBMessaging\ESBMessaging.csproj" />
   </ItemGroup>
 
 </Project>
