--- a/ESB.ModApi/ESB.ModApi.csproj
+++ b/ESB.ModApi/ESB.ModApi.csproj
@@ -66,24 +66,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>rem basic client/single player/coop
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESB.dll" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESBMessaging.dll" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESB_Info.yaml" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)MQTTnet.dll" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)Newtonsoft.Json.dll" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)YamlDotNet.dll" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESB.ModApi.dll" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\Plugins\*.*"
-rem dedicated server
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESBMessaging.dll" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESB.dll" "C:\SteamRoot\steamapps\common\Empyrion - Dedicated Server\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESB_Info.yaml" "C:\SteamRoot\steamapps\common\Empyrion - Dedicated Server\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)MQTTnet.dll" "C:\SteamRoot\steamapps\common\Empyrion - Dedicated Server\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)Newtonsoft.Json.dll" "C:\SteamRoot\steamapps\common\Empyrion - Dedicated Server\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)YamlDotNet.dll" "C:\SteamRoot\steamapps\common\Empyrion - Dedicated Server\Content\Mods\ESB\*.*"
-xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESB.ModApi.dll" "C:\SteamRoot\steamapps\common\Empyrion - Dedicated Server\Content\Mods\ESB\Plugins\*.*"
-
-
-</PostBuildEvent>
+    <PostBuildEvent>xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESB.ModApi.dll" "C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\Plugins\*.*"
+xcopy.exe /D /Y "$(ProjectDir)$(OutDir)ESB.ModApi.dll" "C:\SteamRoot\steamapps\common\Empyrion - Dedicated Server\Content\Mods\ESB\Plugins\*.*"</PostBuildEvent>
   </PropertyGroup>
 </Project>
