--- a/Console.SoundMan/Console.SoundMan.csproj
+++ b/Console.SoundMan/Console.SoundMan.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="xcopy.exe /D /Y &quot;$(ProjectDir)$(OutDir)*.*&quot; &quot;C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\SampleTools\SoundMan\*.*&quot;" />
+    <Exec Command="xcopy.exe /D /Y /E &quot;$(ProjectDir)$(OutDir)*.*&quot; &quot;C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\SampleTools\SoundMan\*.*&quot;" />
   </Target>
 
 </Project>
