--- a/Console.Datalog/Console.Datalog.csproj
+++ b/Console.Datalog/Console.Datalog.csproj
@@ -16,6 +16,12 @@
     <ProjectReference Include="..\ESBMessaging\ESBMessaging.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Discovery.db">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
     <Exec Command="xcopy.exe /D /Y &quot;$(ProjectDir)$(OutDir)*.*&quot; &quot;C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\SampleTools\Datalog\*.*&quot;&#xD;&#xA;xcopy.exe /D /Y &quot;$(ProjectDir)$(OutDir)\runtimes\win-x64\native\*.*&quot; &quot;C:\SteamRoot\steamapps\common\Empyrion - Galactic Survival\Content\Mods\ESB\SampleTools\Datalog\*.*&quot;" />
   </Target>
