--- a/ESB/packages.config
+++ b/ESB/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EmpyrionNetAPI" version="6.3.1" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
-  <package id="MQTTnet" version="4.2.0.706" targetFramework="net48" />
+  <package id="MQTTnet" version="4.2.1.781" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="YamlDotNet" version="13.1.0" targetFramework="net48" />
 </packages>
