--- a/ESB.ModApi/packages.config
+++ b/ESB.ModApi/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EmpyrionNetAPI" version="6.3.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="YamlDotNet" version="13.1.0" targetFramework="net48" />
 </packages>
