--- a/Console.Datalog/Console.Datalog.csproj
+++ b/Console.Datalog/Console.Datalog.csproj
@@ -8,18 +8,18 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CommandLineParser" Version="2.9.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="System.Data.SQLite" Version="1.0.117" />
+    <PackageReference Include="System.Data.SQLite" Version="1.0.118" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ESBMessaging\ESBMessaging.csproj" />
+    <ProjectReference Include="..\ESB.Database\ESB.Database.csproj" />
+    <ProjectReference Include="..\ESB.Messaging\ESB.Messaging.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="Discovery.db">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+    <Folder Include="Database\" />
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
