--- a/EDNAClient/EDNA.csproj
+++ b/EDNAClient/EDNA.csproj
@@ -16,6 +16,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="OpenTK.GLControl" Version="3.3.3" />
   </ItemGroup>
 
   <ItemGroup>
